application/frontend/kubernetes/api/overlays/feature/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microtodo-frontend-api

spec:

  replicas: 1
  template:
    spec:
      containers:
        - name: microtodo-frontend-api
          image: thinkexception.azurecr.io/microtodo-frontendapi:dev
